--- a/curso1/index.html
+++ b/curso1/index.html
@@ -7,19 +7,22 @@
         <title>Trilha de Css</title>
     </head>
     <body>
-        <h1>Seletores css</h1>
-        <p id="text-boasVindas">Bem vindo!</p>
-        <p id="explicacao-boasvindas">No csss possuimos os seletores por id</p>
-        <div>
-            <ul>
-                <li class="seletor-comum texto-maiusculo"><b>Seletores em CSS yay!</b> <br> viu isso?</li>
-                
-                <li class="seletor-comum texto-maiusculo"><b>Seletor por tipo:</b> tem varias coisas aqui uteis</li>
-                <li class="seletor-comum"><b>Seletor por ID</b> o ID sendo uma das coisas mais basicas do css</li>
-                <li class="seletor-comum"><b>Seletor por classe</b> esse daqui sendo o que todo mundo se perde aqui</li>
-                <li><b>Seletor Universal</b>e tem o bom e old * universal</li>
-                <li class="texto-maiusculo"><b>Seletor de atributo </b> e o que todo mundo conhece o atributo os 'body', 'p', etc</li>
-            </ul>
         </div>
+            <div>
+                <ul>
+                    <li> 
+                      <a title="Streaming-Netflix" href="http://www.netflix.com/br/"> Netflix</a> </li>
+                    <li >
+                       <a title="Prime-STREAMING" href="http://www.primevideo.com/splash/watchAnywhere/login">Amazon Prime</a> 
+                        </li>
+                    <li >
+                        <a title="Spotify" href="https://open.spotify.com/login">Spotify</a>
+                        </li>
+                    <li>
+                        <a title="Streaming">Disney plus</a>
+                    </li>
+                </ul>
+            </div>
+    
     </body>
 </html>
