--- a/curso1/index.html
+++ b/curso1/index.html
@@ -7,22 +7,27 @@
         <title>Trilha de Css</title>
     </head>
     <body>
+
         </div>
             <div>
                 <ul>
-                    <li> 
-                      <a title="Streaming-Netflix" href="http://www.netflix.com/br/"> Netflix</a> </li>
-                    <li >
-                       <a title="Prime-STREAMING" href="http://www.primevideo.com/splash/watchAnywhere/login">Amazon Prime</a> 
-                        </li>
-                    <li >
-                        <a title="Spotify" href="https://open.spotify.com/login">Spotify</a>
-                        </li>
                     <li>
-                        <a title="Streaming">Disney plus</a>
-                    </li>
-                </ul>
-            </div>
-    
+                        <a title="Streaming-Netflix" href="http://www.netflix.com/br/"> Netflix</a> </li>
+                        <li>
+                           <a title="Prime-STREAMING" href="http://www.primevideo.com/splash/watchAnywhere/login">Amazon Prime</a>
+                            </li>
+                        <li >
+                            <a title="Spotify" href="https://open.spotify.com/login">Spotify</a>
+                            </li>
+                        <li>
+                            <a title="Streaming">Disney plus</a>
+                        </li>
+                         <li>
+                            <a title="Proximo exercicio" href="agrupamento.html">agrupamento</a>
+
+                        </li>
+                    </ul>
+                </div>
+
     </body>
 </html>
