--- a/curso1/agrupamento.html
+++ b/curso1/agrupamento.html
@@ -28,5 +28,8 @@
     <a id="botao-voltar" href="">voltar</a>
     <br /><br />
     <button id="botao-fechar">Fechar</button>
+
+    <br /><br />
+    <a href="combinadorDesc.html">Proximo exercicio</a>
   </body>
 </html>
