--- a/curso1/agrupamento.html
+++ b/curso1/agrupamento.html
@@ -30,6 +30,6 @@
     <button id="botao-fechar">Fechar</button>
 
     <br /><br />
-    <a href="combinadorDesc.html">Proximo exercicio</a>
+    <a href="combinadorDesc.html">Proximo exercicio - Combinador descendente</a>
   </body>
 </html>
