--- a/curso1/index.html
+++ b/curso1/index.html
@@ -23,7 +23,7 @@
                             <a title="Streaming">Disney plus</a>
                         </li>
                          <li>
-                            <a title="Proximo exercicio" href="agrupamento.html">agrupamento</a>
+                            <a title="Proximo exercicio" href="agrupamento.html">Proximo Exercicio - agrupamento de seletores</a>
 
                         </li>
                     </ul>
