--- a/curso1/combinadorIrmao.html
+++ b/curso1/combinadorIrmao.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Trilha de Css</title>
     <style>
+        div   p {
+            color: tomato;
+        } 
+        .fundo-verde ~ p {
+            background: lightgreen;
+        }
+        
+
     </style>
   </head>
   <body>
@@ -17,6 +25,8 @@
             </p>
           </span>
       </div>
+
+          <p>Paragrafo 1</p>
 
       <div class="fundo-verde">
           <p>Paragrafo 4</p>
@@ -36,6 +46,8 @@
             </p>
           </span>
       </div>
+
+        <p>Paragrafo 17  fora da div</p>
       <div class="fundo-verde">
           <p>Paragrafo 10</p>
           <p>Paragrafo 12</p>
@@ -56,5 +68,7 @@
       </div>
         <p>Paragrafo 17  fora da div</p>
         <p>Paragrafo 18 fora da div</p>
+
+        <a href="combinadorIrmao2.html">Proximo exercicio - Continuacao combinadorIrmao</a>
   </body>
 </html>
