--- a/curso1/combinadorIrmao.html
+++ b/curso1/combinadorIrmao.html
@@ -12,6 +12,19 @@
             background: lightgreen;
         }
         
+    .lista{
+                display: flex;
+                flex-direction: row;
+                }
+           .lista li{
+                margin: 1em;
+                display:inline;
+            }
+           .lista ul{
+               list-style-type: none;
+               display: inline;
+
+           }
 
     </style>
   </head>
@@ -69,6 +82,16 @@
         <p>Paragrafo 17  fora da div</p>
         <p>Paragrafo 18 fora da div</p>
 
+
+    <div class="lista">
+        <ul>
+            <li>
         <a href="combinadorIrmao2.html">Proximo exercicio - Continuacao combinadorIrmao</a>
+            </li>
+            <li>
+             <a title="original" href="index.html">Lista de exercicios</a>
+           </li>
+        </ul>
+     </div>
   </body>
 </html>
