--- a/curso1/index.html
+++ b/curso1/index.html
@@ -11,23 +11,38 @@
         </div>
             <div>
                 <ul>
-                    <li>
-                        <a title="Streaming-Netflix" href="http://www.netflix.com/br/"> Netflix</a> </li>
-                        <li>
-                           <a title="Prime-STREAMING" href="http://www.primevideo.com/splash/watchAnywhere/login">Amazon Prime</a>
-                            </li>
-                        <li >
-                            <a title="Spotify" href="https://open.spotify.com/login">Spotify</a>
-                            </li>
-                        <li>
-                            <a title="Streaming">Disney plus</a>
-                        </li>
-                         <li>
-                            <a title="Proximo exercicio" href="agrupamento.html">Proximo Exercicio - agrupamento de seletores</a>
 
-                        </li>
-                    </ul>
-                </div>
+                    <li>
+                        <a title="Proximo exercicio" href="first1.html">0 Exercicio - Lista de href</a> 
+                    </li>
+                    <li>
+                        <a title="Proximo exercicio" href="agrupamento.html">1 Exercicio - agrupamento de seletores</a>
+                    </li>
+
+                    <li>
+    <a href="combinadorDesc.html">2 exercicio - Combinador descendente</a>
+                    </li>
+                    <li>
+    <a href="combinadorFilho.html"> 3 exercicio - Combinador Filho</a>
+                    </li>
+                    <li>
+        <a href="combinadorIrmao.html">4 exercicio - Combinador Irmao</a>
+                    </li>
+                    <li>
+        <a href="combinadorIrmao2.html">5 exercicio - Continuacao combinadorIrmao</a>
+                    </li>
+                    <li>
+              <a href="larguraAltura.html">6 exercicio - Largura e Altura</a>
+                    </li>
+                    <li>
+              <a href="maxMinAltura.html">7 exercicio - maximo e minimo de altura</a>
+                    </li>
+
+            <li>
+              <a href="margin.html">8 exercicio - Margem</a>
+            </li>
+                </ul>
+            </div>
 
     </body>
 </html>
