--- a/curso1/combinadorFilho.html
+++ b/curso1/combinadorFilho.html
@@ -21,6 +21,20 @@
     .fundo-vermelho > p {
         background-color: lighgcoral;
     }
+
+    .lista{
+                display: flex;
+                flex-direction: row;
+                }
+           .lista li{
+                margin: 1em;
+                display:inline;
+            }
+           .lista ul{
+               list-style-type: none;
+               display: inline;
+
+           }
     </style>
   </head>
   <body>
@@ -72,6 +86,16 @@
       </div>
         <p>Paragrafo 17  fora da div</p>
         <p>Paragrafo 18 fora da div</p>
+
+    <div class="lista">
+        <ul>
+            <li>
         <a href="combinadorIrmao.html">Proximo exercicio - Combinador Irmao</a>
+            </li>
+            <li>
+             <a title="original" href="index.html">Lista de exercicios</a>
+           </li>
+        </ul>
+     </div>
   </body>
 </html>
